# VisionCalibrationSoftware

./: .gitignore  CONTRIBUTING.md  Iner.py  LICENSE  README.md  README_EN.md  calibration.h5  extrinsic_calibration_template.xlsx  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  新版本工具.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
calibration/: extrinsic.npy
examples/: coordinate_transform_utils.py  octave_example.m  pixel_to_world_example.py
src/vision_calib/: __init__.py
src/vision_calib/core/: __init__.py  corner_detector.py  extrinsic.py  intrinsic.py  transform.py  types.py
src/vision_calib/io/: __init__.py  calibration_file.py  image_loader.py
src/vision_calib/io/formats/: __init__.py  hdf5_format.py  json_format.py  mat_format.py
src/vision_calib/ui/: __init__.py  main_window.py
src/vision_calib/ui/styles/: __init__.py  theme.py
src/vision_calib/ui/views/: __init__.py
src/vision_calib/utils/: __init__.py  logging.py  worker.py
tests/: __init__.py
